<?php

declare(strict_types=1);

namespace App\Business\AssetRegistry\Services;

use App\Business\AssetRegistry\Contracts\IAssetRepository;
use App\Business\AssetRegistry\Contracts\IContractRepository;
use App\Business\AssetRegistry\Contracts\IUuidGenerator;
use App\Business\AssetRegistry\Domain\Aggregates\ContractAggregate;
use App\Business\AssetRegistry\Domain\Entities\Contract;
use App\Business\AssetRegistry\Domain\Entities\ContractAsset;
use App\Business\AssetRegistry\Domain\Exceptions\SerialNumberTakenException;
use App\Business\AssetRegistry\DTOs\AssignAssetData;
use App\Business\AssetRegistry\DTOs\ContractAssetData;
use App\Business\AssetRegistry\DTOs\ContractData;
use App\Business\AssetRegistry\DTOs\ContractInputData;
use DateTimeImmutable;

final class ContractService
{
    public function __construct(
        private readonly IContractRepository $contractRepository,
        private readonly IAssetRepository $assetRepository,
        private readonly IUuidGenerator $uuidGenerator,
    ) {}

    public function create(ContractInputData $data): ContractData
    {
        $contract = new Contract(
            $this->uuidGenerator->generate(),
            $data->contractNumber,
            $data->clientName,
            new DateTimeImmutable($data->startDate),
            $data->endDate !== null ? new DateTimeImmutable($data->endDate) : null,
        );

        $saved = $this->contractRepository->save($contract);

        return $this->toContractData($saved);
    }

    public function update(string $id, ContractInputData $data): ContractData
    {
        $contract = $this->contractRepository->findById($id);

        $contract->update(
            $data->contractNumber,
            $data->clientName,
            new DateTimeImmutable($data->startDate),
            $data->endDate !== null ? new DateTimeImmutable($data->endDate) : null,
        );

        $saved = $this->contractRepository->save($contract);

        return $this->toContractData($saved);
    }

    public function delete(string $id): void
    {
        $this->contractRepository->delete($id);
    }

    public function findById(string $id): ContractData
    {
        return $this->toContractData($this->contractRepository->findById($id));
    }

    public function findByIdWithAssets(string $id): ContractData
    {
        return $this->toDetailData($this->contractRepository->findByIdWithAssets($id));
    }

    /** @return ContractData[] */
    public function findAll(): array
    {
        return array_map($this->toContractData(...), $this->contractRepository->findAll());
    }

    public function assignAsset(string $contractId, AssignAssetData $data): ContractData
    {
        $aggregate = $this->contractRepository->findByIdWithAssets($contractId);
        $asset = $this->assetRepository->findById($data->assetId);

        if ($this->contractRepository->isSerialNumberTaken($data->serialNumber)) {
            throw new SerialNumberTakenException($data->serialNumber);
        }

        $contractAsset = new ContractAsset(
            $this->uuidGenerator->generate(),
            $contractId,
            $data->assetId,
            $data->serialNumber,
        );

        $aggregate->assignAsset($contractAsset);
        $aggregate->addAssetDetail($asset);
        $this->contractRepository->addContractAsset($contractAsset);

        return $this->toDetailData($aggregate);
    }

    public function removeAsset(string $contractId, string $assetId): void
    {
        $this->contractRepository->findById($contractId);
        $this->contractRepository->removeContractAsset($contractId, $assetId);
    }

    private function toContractData(Contract $contract): ContractData
    {
        return new ContractData(
            $contract->id,
            $contract->getContractNumber(),
            $contract->getClientName(),
            $contract->getStartDate()->format('Y-m-d'),
            $contract->getEndDate()?->format('Y-m-d'),
        );
    }

    private function toDetailData(ContractAggregate $aggregate): ContractData
    {
        $contract = $aggregate->contract;

        $assets = array_map(
            function (ContractAsset $ca) use ($aggregate): ContractAssetData {
                $asset = $aggregate->getAssetDetail($ca->assetId);

                return new ContractAssetData(
                    $ca->id,
                    $ca->assetId,
                    $ca->serialNumber,
                    $asset?->getName() ?? '',
                    $asset?->getManufacturer() ?? '',
                    $asset?->getModel() ?? '',
                );
            },
            $aggregate->getContractAssets(),
        );

        return new ContractData(
            $contract->id,
            $contract->getContractNumber(),
            $contract->getClientName(),
            $contract->getStartDate()->format('Y-m-d'),
            $contract->getEndDate()?->format('Y-m-d'),
            $assets,
        );
    }
}
