@startuml domain-model
!theme plain
skinparam classAttributeIconSize 0

title Asset Register — Domain Model

class Asset {
    +id: string {readonly}
    -name: string
    -manufacturer: string
    -model: string
    -deletedAt: DateTimeImmutable?
    +getName(): string
    +getManufacturer(): string
    +getModel(): string
    +getDeletedAt(): DateTimeImmutable?
    +isDeleted(): bool
    +update(name, manufacturer, model): void
    +softDelete(at: DateTimeImmutable): void
}

class Contract {
    +id: string {readonly}
    -contractNumber: string
    -clientName: string
    -startDate: DateTimeImmutable
    -endDate: DateTimeImmutable?
    +getContractNumber(): string
    +getClientName(): string
    +getStartDate(): DateTimeImmutable
    +getEndDate(): DateTimeImmutable?
    +update(...): void
}

class ContractAsset <<readonly>> {
    +id: string
    +contractId: string
    +assetId: string
    +serialNumber: string
}

class ContractAggregate {
    +contract: Contract {readonly}
    -contractAssets: ContractAsset[]
    -assetDetails: Asset[]
    +getContractAssets(): ContractAsset[]
    +getAssetDetail(assetId): Asset?
    +assignAsset(ContractAsset): void
    +addAssetDetail(asset: Asset): void
}

interface IAssetRepository {
    +findById(id): Asset
    +findAll(): Asset[]
    +save(Asset): Asset
    +hasAssignments(assetId): bool
}

interface IContractRepository {
    +findById(id): Contract
    +findByIdWithAssets(id): ContractAggregate
    +findAll(): Contract[]
    +save(Contract): Contract
    +delete(id): void
    +addContractAsset(ContractAsset): ContractAsset
    +removeContractAsset(contractId, assetId): void
    +isSerialNumberTaken(serialNumber): bool
}

class AssetService {
    +create(AssetInputData): AssetData
    +update(id, AssetInputData): AssetData
    +softDelete(id): void
    +findById(id): AssetData
    +findAll(): AssetData[]
}

class ContractService {
    +create(ContractInputData): ContractData
    +update(id, ContractInputData): ContractData
    +delete(id): void
    +findById(id): ContractData
    +findByIdWithAssets(id): ContractData
    +findAll(): ContractData[]
    +assignAsset(contractId, AssignAssetData): ContractData
    +removeAsset(contractId, assetId): void
}

note right of ContractService::findByIdWithAssets
  ContractData.assets is null for
  create/update/list/findById;
  populated for findByIdWithAssets
  and assignAsset.
end note

ContractAggregate *-- Contract
ContractAggregate *-- ContractAsset
ContractAggregate o-- Asset

AssetService ..> IAssetRepository : uses
ContractService ..> IContractRepository : uses
ContractService ..> IAssetRepository : uses

@enduml
